Se agregan las librerías de obs-websocket y Twurple para manejo de eventos, se modifica package.json para que pueda utilizar import en vez de required (por twurple)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "zora-deck",
+  "type": "module",
   "productName": "zora-deck",
   "version": "1.0.0",
   "description": "My Electron application description",
@@ -31,6 +32,11 @@
     "vite": "^5.4.21"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "@twurple/api": "^8.0.2",
+    "@twurple/auth": "^8.0.2",
+    "@twurple/chat": "^8.0.2",
+    "@twurple/eventsub-ws": "^8.0.2",
+    "electron-squirrel-startup": "^1.0.1",
+    "obs-websocket-js": "^5.0.7"
   }
 }
